Fix the gap between header & list

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body {
 	background: #f4f5f9; /*#D9D4CF;*/ /*#d8e9ef;*/
 	color: #454552;
 	text-align: center;
+	top: 0px;
+	left: 0px;
 }
 
 header {
@@ -34,14 +36,14 @@ header {
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	height: 120px;
+	height: 140px;
 	background: #f4f5f9; /*#D9D4CF;*/ /*#fefefe; */ /*#d8e9ef;*/
 	z-index: 10;
 }
 
 h1 {
 	font-size: 3em;
-	margin-top: 20px;
+	margin-top: 30px;
 	margin-bottom: 0px;
 }
 
@@ -51,13 +53,13 @@ header p {
 
 #wrapper {
 	position: relative;
-	top: 120px;
+	top: 140px;
 	/*padding: 30px 60px;*/
 	/*width: 720px;*/
 	width: 80%;
 	min-width: 300px;
 	max-width: 760px;
-	margin: 40px auto;
+	margin: 0px auto;
 }
 
 .list {
@@ -71,7 +73,8 @@ header p {
 	display: inline-block;
 	/*width: 220px;*/
 	height: 198px;
-	margin: 10px 5px;
+	margin: 20px 5px;
+	margin-top: 0px;
 	text-align: left;
 	/*float: left;*/
 	background-image: url('../images/shadow.png');
